--- a/doc/reference/guide/pom.xml
+++ b/doc/reference/guide/pom.xml
@@ -99,66 +99,31 @@
           </execution>
         </executions>
       </plugin>
+
+
       <plugin>
-        <groupId>org.wikbook</groupId>
-        <artifactId>wikbook.maven</artifactId>
-        <configuration>
-          <afterBookBodyXML><![CDATA[
-          <xi:include href="juzu-plugins-servlet.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
-          <xi:include href="juzu-plugins-portlet.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
-          <xi:include href="juzu-plugins-upload.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
-          <xi:include href="juzu-plugins-less.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
-          <xi:include href="juzu-plugins-webjars.xml" xmlns:xi="http://www.w3.org/2001/XInclude" />
-          ]]>
-          </afterBookBodyXML>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.wikbook</groupId>
-        <artifactId>wikbook.docbkxstyle</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.wikbook</groupId>
-        <artifactId>wikbook.html2pdf</artifactId>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
         <executions>
           <execution>
-            <id>zip-html</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <configuration>
-              <descriptors>
-                <descriptor>src/main/assembly/html.xml</descriptor>
-              </descriptors>
-            </configuration>
+            <id>copy-asciidoc</id>
+          </execution>
+          <execution>
+            <id>copy-stylesheets</id>
           </execution>
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
+        <groupId>org.asciidoctor</groupId>
+        <artifactId>asciidoctor-maven-plugin</artifactId>
+        <version>0.1.3.1</version>
         <executions>
           <execution>
-            <id>attach-artifacts</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>${wikbook.target}/output/pdf/index.pdf</file>
-                  <type>pdf</type>
-                </artifact>
-              </artifacts>
-            </configuration>
+            <id>generate-html</id>
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 
