--- a/pom.xml
+++ b/pom.xml
@@ -773,6 +773,141 @@
           <version>1.1</version>
         </plugin>
 
+
+
+
+
+        <!-- Asciidoc section -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>copy-asciidoc</id>
+              <phase>generate-resources</phase>
+              <goals>
+                <goal>copy-resources</goal>
+              </goals>
+              <configuration>
+                <resources>
+                  <resource>
+                    <directory>src/main/asciidoc</directory>
+                  </resource>
+                </resources>
+                <outputDirectory>target/asciidoc</outputDirectory>
+              </configuration>
+            </execution>
+            <execution>
+              <id>copy-stylesheets</id>
+              <phase>generate-resources</phase>
+              <goals>
+                <goal>copy-resources</goal>
+              </goals>
+              <configuration>
+                <resources>
+                  <resource>
+                    <directory>src/main/resources</directory>
+                  </resource>
+                </resources>
+                <outputDirectory>target/docs/html</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.asciidoctor</groupId>
+          <artifactId>asciidoctor-maven-plugin</artifactId>
+          <version>0.1.3.1</version>
+          <executions>
+            <execution>
+              <id>generate-html</id>
+              <phase>prepare-package</phase>
+              <goals>
+                <goal>process-asciidoc</goal>
+              </goals>
+              <configuration>
+                <!-- asciidoctor -d book -o target/book.html -a copycss -a toc2 -a sectanchors \
+                     -a source-highlighter=coderay -a stylesheet=foundation-lime.css -a crash-version=${project.version} \
+                     target/asciidoc/book.asciidoc -->
+                <sourceDirectory>${project.build.directory}/asciidoc</sourceDirectory>
+                <sourceDocumentName>${project.build.directory}/asciidoc/book.asciidoc</sourceDocumentName>
+                <outputDirectory>target/docs/html</outputDirectory>
+                <backend>html</backend>
+                <doctype>book</doctype>
+                <attributes>
+                  <toc2>1</toc2>
+                  <stylesheet>foundation-lime.css</stylesheet>
+                  <source-highlighter>coderay</source-highlighter>
+                  <crash-version>${project.version}</crash-version>
+                  <sectanchors>1</sectanchors>
+                  <icons>font</icons>
+                  <sourcesdir>${project.build.directory}/sources</sourcesdir>
+                </attributes>
+              </configuration>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>org.asciidoctor</groupId>
+              <artifactId>asciidoctor-java-integration</artifactId>
+              <version>0.1.3</version>
+              <scope>compile</scope>
+              <exclusions>
+                <exclusion>
+                  <artifactId>erubis</artifactId>
+                  <groupId>rubygems</groupId>
+                </exclusion>
+                <exclusion>
+                  <artifactId>tilt</artifactId>
+                  <groupId>rubygems</groupId>
+                </exclusion>
+                <exclusion>
+                  <artifactId>asciidoctor</artifactId>
+                  <groupId>rubygems</groupId>
+                </exclusion>
+                <exclusion>
+                  <artifactId>slim</artifactId>
+                  <groupId>rubygems</groupId>
+                </exclusion>
+                <exclusion>
+                  <artifactId>haml</artifactId>
+                  <groupId>rubygems</groupId>
+                </exclusion>
+                <exclusion>
+                  <artifactId>coderay</artifactId>
+                  <groupId>rubygems</groupId>
+                </exclusion>
+              </exclusions>
+            </dependency>
+          </dependencies>
+        </plugin>
+
+<!--
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>assemble-html</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+              <configuration>
+                <descriptors>
+                  <descriptor>src/main/assembly/html.xml</descriptor>
+                </descriptors>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+-->
+
+
+
+
+
+
         <!-- Wikbook -->
         <plugin>
           <groupId>org.wikbook</groupId>
